# heydari

./: .env.example  .firebaserc  .gitignore  .rustfmt.toml  Cargo.toml  README.md  clo.js  firebase.json  main.py  manage  package-lock.json  package.json  requirements.txt  template.py  vite.config.ts  webpack.config.js
.github/workflows/: deploy.yml  firebase.deploy.yml
admin/: icons.tsx  index.html  index.tsx  models.ts  tsconfig.json
admin/abi/: gen.ts  httpx.ts  user_defined.ts
admin/comps/: alert.tsx  hoverInp.tsx  index.ts  loadingDots.tsx  loadingElem.tsx  pagination.tsx  popup.tsx  select.tsx  timer.tsx
admin/layout/: anbar.tsx  login.tsx  navbar.tsx  orders.tsx  product-tags.tsx  products.tsx  storage.tsx  users.tsx
admin/locale/: comp.tsx  fa.ts  index.ts  types.ts
admin/shared/: httpx.ts  index.ts  perms.ts  tools.ts
admin/store/: popup.ts  self.ts
admin/style/: button.scss  config.scss  index.scss  input.scss  root.scss  theme.scss
api/: __init__.py  admin.py  blog.py
api/modules/: auth.py  user.py
app/: App.tsx  basic.html  template.html
app/@types/: modules.d.ts
config/: backup.sh  deploy.sh  gunicorn.py  heydari.backup.service  heydari.backup.timer  heydari.service  heydari.uwsgi.service  nginx.conf  redis.conf  redis_heydari.service  uwsgi.ini
db/: record.py  user.py
docs/: NOTES.md
migrations/: 0001_init.sql  0002_best_products.sql  0002_products_info.sql
shared/: __init__.py  errors.py  sms.py
src/: config.rs  docs.rs  main.rs  sitemap.rs  utils.rs  web.rs
style/: nav.scss
templates/: 404.html  base.html
(+184 files in other folders)
