[package]
name = "heydari"
version = "0.1.42"
edition = "2021"

[dependencies]
shah = "0.1.0"
webp = "0.3.0"
image = "0.25.2"
log = "0.4.22"
rand = "0.8.5"
cercis = "1.2.0"
sha2 = "0.10.8"
hex = "0.4.3"
itertools = "0.13.0"
lazy_static = "1.5.0"
awc = { version = "3.5.1", features = ["openssl"] }
utoipa = { version = "4.2.3", features = ["actix_extras", "debug"] }
actix-http = "3.9.0"
actix-web = "4.9.0"
actix-utils = "3.0.1"
actix-web-httpauth = "0.8.2"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
tokio = { version = "1.40.0", features = ["full"] }
serde = "1.0.210"
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
sqlx-cli = "0.8.2"
minijinja = { version = "2.3.1", features = ["loader"] }

[dependencies.sqlx]
version = "0.8.2"
features = ["sqlite", "runtime-tokio-rustls", "chrono"]
